--- a/wp-content/themes/wpinabox-theme/package.json
+++ b/wp-content/themes/wpinabox-theme/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wpinabox",
+  "name": "wpinabox Theme",
   "version": "0.0.1",
   "description": "WP Site Starter",
   "main": "index.php",
