--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "andyinabox/wp",
+    "name": "andyinabox/wpinabox",
     "type": "project",
     "minimum-stability": "stable",
     "repositories": [
