--- a/wp-content/themes/wpinabox-theme/package.json
+++ b/wp-content/themes/wpinabox-theme/package.json
@@ -27,5 +27,8 @@
   },
   "dependencies": {
     "css-reset-and-normalize-sass": "^0.1.2"
+  },
+  "browserSync": {
+    "proxy": "wpinabox.dev"
   }
 }
