--- a/wp-content/themes/wpinabox-theme/.gitignore
+++ b/wp-content/themes/wpinabox-theme/.gitignore
@@ -1,12 +1,7 @@
 # folders and files to be ignored by git
 
 node_modules/
-
-############
-## Bones
-############
-
-Bones.esproj/
+yarn.lock
 
 ############
 ## IDEs
