--- a/wp-content/themes/wpinabox-theme/package.json
+++ b/wp-content/themes/wpinabox-theme/package.json
@@ -14,27 +14,29 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.23.1",
     "clean-webpack-plugin": "^0.1.17",
     "cross-env": "^5.1.3",
     "css-hot-loader": "^1.3.5",
     "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "image-webpack-loader": "^4.3.1",
     "file-loader": "^1.1.5",
-    "fsevents": "^1.2.4",
-    "modernizr-webpack-plugin": "^1.0.7",
+    "modernizr": "^3.6.0",
+    "modernizr-loader": "^1.0.1",
     "node-sass": "^4.5.3",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.1",
     "postcss-loader": "^2.0.10",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
-    "uglifyjs-webpack-plugin": "^1.1.6",
-    "webpack": "^3.9.1",
-    "webpack-dev-server": "^2.9.5"
+    "url-loader": "^1.1.1",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
+    "dotenv": "^6.0.0"
+    
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
+    "@babel/polyfill": "^7.0.0-rc.4",
     "css-reset-and-normalize-sass": "^0.1.2"
   },
   "browserSync": {
