--- a/wp-content/plugins/wpinabox-plugin/package.json
+++ b/wp-content/plugins/wpinabox-plugin/package.json
@@ -2,7 +2,7 @@
 {
   "name": "wpinabox-plugin",
   "version": "0.2.0",
-  "main": "wpinabox-plugin.pgp",
+  "main": "wpinabox-plugin.php",
   "author": "Andy Dayton <amdayton@gmail.com>",
   "devDependencies": {
   }
