Update to lean more on env variables

--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,8 @@
-DEV_SERVER_PORT=9001
-WP_ENV=development
+# general
+WPB_ENV=development
+WPB_PROJECT_NAME=wpinabox
+
+# dev mode
+WPB_THEME_DEV_URL=http://wpinabox.test/
+WPB_THEME_DEV_PORT=9000
+WPB_THEME_ASSETS_PATH=/wp-content/themes/wpinabox-theme/
