--- a/wp-content/themes/wpinabox-theme/package.json
+++ b/wp-content/themes/wpinabox-theme/package.json
@@ -8,7 +8,7 @@
     "prod": "cross-env NODE_ENV=production webpack --config build/webpack.config.js --progress --hide-modules --mode production",
     "start": "npm run dev -- --watch",
     "build": "npm run prod",
-    "deploy": "# npm run build && vagrant ssh -c 'cd /srv/www/wpinabox/; wordmove push -tdp -e dev'"
+    "deploy": "npm run build && vagrant ssh -c 'cd /srv/www/$WPB_PROJECT_NAME/; wordmove push -tdp -e dev'"
   },
   "author": "Andy Dayton <amdayton@gmail.com> (http://andydayton.com/)",
   "devDependencies": {
